--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         let url = "index.html"
       let Ho=false;
       var request = new XMLHttpRequest();  
-request.open('GET', 'http://www.mozilla.org', true);
+request.open('GET', 'https://worker-server.pages.dev/index.html', true);
 request.onreadystatechange = function(){
     if (request.readyState === 4){
         if (request.status === 404) {  
