--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ if (url) { var win; document.querySelector('button').onclick = function() { if (
                                               iframe.src = url;
                                             win.document.body.appendChild(iframe); 
                                             } document.querySelector('button').style.background='#ff5148'; 
-                                                                           document.querySelector('button').innerHTML="Game Loaded!"; }; } </script> 
+                                        document.querySelector('button').innerHTML="Launched"; }; }
+    </script> 
     <style> * { color: white; font-family: arial; text-align: center; } 
         button { width: 220px; height: 40px; border-radius: 12px; 
                 background-color: #1F51FF; font-family: Arial, Helvetica, sans-serif; border: none; transition: background-color 500ms; } button:hover { background-color: #1F51FF; }
