--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         let html = document.getElementById("demo").innerHTML;
          var s = window.open();
         s.document.body.innerHTML = html;
+document.getElementById("myP").innerHTML="REPLICATED"; }; }
 
         }
         var urlobj = new window.URL(window.location.href);
