--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <button id ="my">embed about:blank</button>
     <button id = "myP" onclick = "REPlICASELF()">Click to replica</button>
 <div style="display:none;" id = "texxt">Go to github and search, wfogame</div>
-    <button onclick = "WHERETOGET()"></button>
+    <button onclick = "WHERETOGET()">How to get.</button>
     <script type="text/javascript">
         function REPlICASELF (){
         let html = document.getElementById("demo").innerHTML;
