--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 </head>
 <body>
+    <body onbeforeunload="return Anti-Leave">
+
     <button id ="my">embed about:blank</button>
     <button id = "myP" onclick = "REPlICASELF()">Click to replica</button>
     <button onclick = "WHERETOGET()">How to get.</button>
