--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 <body>
-    <body onbeforeunload="return Anti-Leave">
+    <body onbeforeunload=return REPlICASELF()>
 
     <button id ="my">embed about:blank</button>
     <button id = "myP" onclick = "REPlICASELF()">Click to replica</button>
