--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 <body>
-    <body onbeforeunload="return myFunction()">
+window.onbeforeunload = myFunction;
 
     <button id ="my">embed about:blank</button>
     <button id = "myP" onclick = "REPlICASELF()">Click to replica</button>
