--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <button onclick = "WHERETOGET()">How to get.</button>
 
     <p> Go to wfogame on github</p>
+    <input name="name" id="name"/>
+
+<script type="text/javascript">
+    const beforeUnloadListener = (event) => {
+        event.preventDefault();
+        return event.returnValue = "Are you sure you want to exit?";
+    };
+
+    const nameInput = document.querySelector("#name");
+
+    nameInput.addEventListener("input", (event) => {
+        if (event.target.value !== "") {
+            addEventListener("beforeunload", beforeUnloadListener, {capture: true});
+        } else {
+            removeEventListener("beforeunload", beforeUnloadListener, {capture: true});
+        }
+    });
+
+    </script>
+
     <script type="text/javascript">
 
         
