--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <button id = "myP" onclick = "REPlICASELF()">Click to replica</button>
 
     <p> Go to wfogame on github</p>
+    <label for ="name">Type something in here for anti close, TEXT NOT VISIBLE</label>
     <input name="name" id="name"/>
 
 <script type="text/javascript">
